--- a/Biblio.bib
+++ b/Biblio.bib
@@ -71,7 +71,6 @@ address = {New York, NY, USA},
 volume = {5},
 number = {8},
 issn = {0001-0782},
-url = {https://doi.org/10.1145/368637.368653},
 doi = {10.1145/368637.368653},
 journal = {Commun. ACM},
 month = aug,
@@ -85,11 +84,11 @@ numpages = {7}
 
 @article{Bardenhagen_Contact_2001,
 author = {Bardenhagen, S. and Guilkey, James and Roessig, K. and Brackbill, J. and Witzel, W. and Foster, J.},
-year = {2001},
-month = {01},
-pages = {},
-title = {An improved contact algorithm for the material point method and application to stress propagation in granular material},
 volume = {2},
+year = {2001},
+number = {4},
+pages = {509--522},
+title = {An improved contact algorithm for the material point method and application to stress propagation in granular material},
 journal = {CMES. Computer Modeling in Engineering & Sciences},
 doi = {10.3970/cmes.2001.002.509}
 }
@@ -190,8 +189,7 @@ volume = "215",
 pages = "65 - 79",
 year = "2019",
 issn = "0045-7949",
-doi = "https://doi.org/10.1016/j.compstruc.2019.02.003",
-url = "http://www.sciencedirect.com/science/article/pii/S004579491831513X",
+doi = "10.1016/j.compstruc.2019.02.003",
 author = "Kumchol Yun and Zhenqing Wang and Mengzhou Chang and Jingbiao Liu and Tae-Jong Kim and Namjin Son and Kyongsu Ji and Sakaya Ronald",
 keywords = "Three-dimensional fracture, Crack tracking algorithm, Anisotropic damage, Crack surface discretization, Local tracking"
 }
@@ -204,8 +202,7 @@ pages = "42 - 53",
 year = "2016",
 note = "CIVIL-COMP",
 issn = "0045-7949",
-doi = "https://doi.org/10.1016/j.compstruc.2015.10.005",
-url = "http://www.sciencedirect.com/science/article/pii/S0045794915002862",
+doi = "10.1016/j.compstruc.2015.10.005",
 author = "T. Nagashima and M. Sawada",
 keywords = "XFEM, Cohesive zone model, Level set method, Tip element, Implicit method, Explicit method"
 }
@@ -231,8 +228,7 @@ volume = "206",
 pages = "122 - 144",
 year = "2018",
 issn = "0045-7949",
-doi = "https://doi.org/10.1016/j.compstruc.2018.05.010",
-url = "http://www.sciencedirect.com/science/article/pii/S0045794917318084",
+doi = "10.1016/j.compstruc.2018.05.010",
 author = "Junjie Huang",
 keywords = "Cementitious microstructures, Aggregate inclusions, Level set method, Extended finite element method, Fractional Brownian motion, Packing algorithm"
 }
@@ -246,8 +242,7 @@ number = "3",
 pages = "363 - 382",
 year = "1993",
 issn = "0013-7944",
-doi = "https://doi.org/10.1016/0013-7944(93)90030-V",
-url = "http://www.sciencedirect.com/science/article/pii/001379449390030V",
+doi = "10.1016/0013-7944(93)90030-V",
 author = "I.L. Lim and I.W. Johnston and S.K. Choi"
 }
 
@@ -258,8 +253,7 @@ volume = "318",
 pages = "1 - 32",
 year = "2017",
 issn = "0045-7825",
-doi = "https://doi.org/10.1016/j.cma.2017.01.017",
-url = "http://www.sciencedirect.com/science/article/pii/S0045782516311537",
+doi = "10.1016/j.cma.2017.01.017",
 author = "Kun Wang and WaiChing Sun",
 keywords = "Compaction band, Eigen-erosion, Porous media, Hydraulic fracture, Anti-crack, Hydraulic aperture",
 }
@@ -272,8 +266,7 @@ pages = "101 - 111",
 year = "2019",
 issn = "0734-743X",
 doi = "https://doi.org/10.1016/j.ijimpeng.2019.03.003",
-url = "http://www.sciencedirect.com/science/article/pii/S0734743X18309977",
-author = "G. Ruiz and A. [de la Rosa] and L.C. Almeida and E. Poveda and X.X. Zhang and M. Tarifa and Z.M. Wu and R.C. Yu",
+author = "G. Ruiz and A. de la Rosa and L.C. Almeida and E. Poveda and X.X. Zhang and M. Tarifa and Z.M. Wu and R.C. Yu",
 }
 
 
@@ -281,26 +274,20 @@ author = "G. Ruiz and A. [de la Rosa] and L.C. Almeida and E. Poveda and X.X. Zh
 author = {Zhang, Kun and Shen, Shui-Long and Zhou, Annan},
 title = {Dynamic brittle fracture with eigenerosion enhanced material point method},
 journal = {International Journal for Numerical Methods in Engineering},
-volume = {n/a},
-number = {n/a},
-pages = {},
+pages = {1-27},
 keywords = {brittle fracture, eigenerosion approach, material point method, phantom-node method},
 doi = {10.1002/nme.6381},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/nme.6381},
-eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/nme.6381}
 }
 
 @article{Wang_2020,
 author = {Wang, Yingnan and Tran, Hieu T. and Nguyen, Giang D. and Ranjith, Pathegama G. and Bui, Ha H.},
 title = {Simulation of mixed-mode fracture using SPH particles with an embedded fracture process zone},
 journal = {International Journal for Numerical and Analytical Methods in Geomechanics},
-volume = {n/a},
-number = {n/a},
-pages = {},
+volume = {44},
+number = {10},
+pages = {1417-1445},
 keywords = {cohesive fracture law, mixed-mode, regularisation, rock fracture, smoothed particle hydrodynamics (SPH)},
-doi = {10.1002/nag.3069},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/nag.3069},
-eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/nag.3069}
+doi = {10.1002/nag.3069}
 }
 
 @article{Wang_2019,
@@ -323,7 +310,9 @@ publisher = {Elsevier}
 author = {Navas, Pedro and Yu, Rena and Ruiz, Gonzalo},
 year = {2018},
 month = {10},
-pages = {},
+volume = {172},
+pages = {94 - 104},
+year = {2018},
 title = {Meshfree modeling of the dynamic mixed-mode fracture in FRC through an eigensoftening approach},
 volume = {172},
 journal = {Engineering Structures},
@@ -349,8 +338,7 @@ pages = {42 - 48},
 year = {2017},
 note = {Special Issue: Characterisation of Fractures in Rock: from Theory to Practice (ROCKFRAC)},
 issn = {0013-7952},
-doi = {https://doi.org/10.1016/j.enggeo.2017.05.001},
-url = {http://www.sciencedirect.com/science/article/pii/S0013795217306907},
+doi = {10.1016/j.enggeo.2017.05.001},
 author = {Timon Rabczuk and Huilong Ren},
 keywords = {Brittle fracture, Quasi-static, Artificial damping, Contact, Mohr-Coulomb model}
 }
@@ -385,8 +373,7 @@ number = {6},
 pages = {1156 - 1168},
 year = {2011},
 issn = {0013-7944},
-doi = {https://doi.org/10.1016/j.engfracmech.2010.11.020},
-url = {http://www.sciencedirect.com/science/article/pii/S0013794410004959},
+doi = {10.1016/j.engfracmech.2010.11.020},
 author = {Youn Doh Ha and Florin Bobaru},
 keywords = {Crack-path instability, Crack branching, Dynamic brittle fracture, Peridynamics, Nonlocal methods}
 }
@@ -417,10 +404,13 @@ doi = {10.1016/j.commatsci.2007.02.010}
 author = {Guo, Y. and Nairn, John},
 year = {2006},
 month = {12},
-pages = {},
+volume = {1},
+number = {1},
+pages = {11-25},
 title = {Three-Dimensional Dynamic Fracture Analysis Using the Material Point Method},
 volume = {16},
-journal = {Computer Modeling in Engineering & Sciences}
+journal = {Computer Modeling in Engineering & Sciences},
+doi = {10.3970/cmes.2006.016.141 }
 }
 
 @article{Zhenmao_2005,
@@ -436,12 +426,13 @@ doi = {10.1007/s00033-005-3011-0}
 
 @article{Nairn_2004,
 author = {GUO, Y. and Nairn, John},
-year = {2004},
-month = {09},
-pages = {},
-title = {Calculation of J-Integral and Stress Intensity Factors using the Material Point Method},
 volume = {6},
-journal = {CMES. Computer Modeling in Engineering & Sciences}
+year = {2004},
+number = {3},
+pages = {295--308},
+title = {Calculation of J-Integral and Stress Intensity Factors using the Material Point Method},
+journal = {CMES. Computer Modeling in Engineering & Sciences},
+doi = {10.3970/cmes.2004.006.295}
 }
 
 @article{Sulsky_2004,
@@ -474,7 +465,6 @@ VOLUME = {4},
 YEAR = {2003},
 NUMBER = {6},
 PAGES = {649--664},
-URL = {http://www.techscience.com/CMES/v4n6/33290},
 ISSN = {1526-1506},
 DOI = {10.3970/cmes.2003.004.649}
 }
@@ -520,8 +510,7 @@ number = {3},
 pages = {385 - 399},
 year = {2000},
 issn = {0045-7825},
-doi = {https://doi.org/10.1016/S0045-7825(00)80002-X},
-url = {http://www.sciencedirect.com/science/article/pii/S004578250080002X},
+doi = {10.1016/S0045-7825(00)80002-X},
 author = {T. Belytschko and D. Organ and C. Gerlach}
 }
 
@@ -533,8 +522,7 @@ number = {17},
 pages = {2547 - 2570},
 year = {1995},
 issn = {0020-7683},
-doi = {https://doi.org/10.1016/0020-7683(94)00282-2},
-url = {http://www.sciencedirect.com/science/article/pii/0020768394002822},
+doi = {10.1016/0020-7683(94)00282-2},
 author = {T. Belytschko and Y.Y. Lu and L. Gu and M. Tabbara}
 }
 
@@ -545,6 +533,7 @@ JOURNAL =      "Advances in Applied Mechanics",
 YEAR =         "1962",
 volume =       "7",
 pages =        "55--129",
+doi = "10.1016/S0065-2156(08)70121-2"
 }
 
 @Article{Ahmad_1995,
@@ -592,7 +581,8 @@ TITLE =        "Fracture behaviour of high-strength concrete at a wide range of 
 JOURNAL =      "International Journal of Impact Engineering",
 volume =       "36",
 pages =        "1204--1209",
-year = 2009
+year = "2009",
+doi = "10.1016/j.ijimpeng.2009.04.007"
 }
 
 @ARTICLE{Zhang_2010a,
@@ -602,6 +592,7 @@ JOURNAL =      "International Journal of Impact Engineering",
 YEAR =         "2010",
 volume =       "37",
 pages =        "359--370",
+doi = "10.1016/j.ijimpeng.2009.10.002"
 }
 
 @ARTICLE{Zhang_2010b,
@@ -629,7 +620,8 @@ TITLE =        "Analysis of crack formation and crack growth in concrete by mean
 JOURNAL =      "Cement and Concrete Research.",
 volume =       "6",
 pages =        "773--782",
-year = 1976
+year = 1976,
+doi = "10.1016/0008-8846(76)90007-7"
 }
 
 @ARTICLE{Yu_2004, 
@@ -659,6 +651,7 @@ JOURNAL =      "International Journal for Numerical Methods in Engineering.",
 YEAR =         "2003",
 volume =       "58",
 pages =        "1873--1905",
+doi = "10.1002/nme.941"
 }
 
 @ARTICLE{Belytschko_02,
@@ -724,7 +717,8 @@ pages =        "2316--2343",
   journal = 	 ijnme,
   year = 	 {2000},
   volume = 	 {48},
-  pages = 	 {963-994}
+  pages = 	 {963-994},
+  doi = "10.1002/(SICI)1097-0207(20000710)48:7<963::AID-NME908>3.0.CO;2-X"
 }
 
 @ARTICLE{Ruiz_2001,
@@ -753,6 +747,7 @@ JOURNAL =      "SIAM J. Multiscale Model. Simul.",
 YEAR =         "2009",
 volume =       "7",
 pages =        "1237--1266",
+doi = "10.1137/080712568"
  }
 
 @Article{Pandolfi_1999,
@@ -771,6 +766,7 @@ JOURNAL = "International Journal for Numerical Methods in Engineering.",
 YEAR = "1999",
 volume = "44",
 pages = "1267--1282",
+doi = "10.1002/(SICI)1097-0207(19990330)44:9<1267::AID-NME486>3.0.CO;2-7"
 }
 
 @ARTICLE{Pandolfi_2002,
@@ -780,6 +776,7 @@ JOURNAL =      "Engineering with Computers.",
 YEAR =         "2002",
 volume =       "18(2)",
 pages =        "148--159",
+doi = "10.1007/s003660200013"
 }
 
 @Article{Pandolfi_2006,
@@ -799,6 +796,7 @@ JOURNAL =      "International Journal for Numerical Methods in Engineering",
 YEAR =         "2012",
 volume =       "92",
 pages =        "694--714",
+doi = "10.1002/nme.4352"
 }
 
 @ARTICLE{Pandolfi_2013, 
@@ -808,6 +806,7 @@ JOURNAL =      "International Journal of fracture",
 YEAR =         "2013",
 volume =       "184",
 pages =        "3--16",
+doi = "10.1007/s10704-012-9788-x"
 }
 
 @ARTICLE{Li_2015,
@@ -817,6 +816,7 @@ JOURNAL =      "Mechanics of Materials",
 YEAR =         "2015",
 volume =       "80",
 pages =        "288--297",
+doi  = "10.1016/j.mechmat.2014.03.008"
 }
 
 @ARTICLE{Li_2012, 
@@ -826,6 +826,7 @@ JOURNAL =      "International Journal for Impact Engineering",
 YEAR =         "2012",
 volume =       "42",
 pages =        "25--36",
+doi = "10.1016/j.ijimpeng.2011.11.003"
 }
 
 @ARTICLE{Mindess_1985,
@@ -923,6 +924,7 @@ JOURNAL =      "Materials and Structures.",
 YEAR =         "1983",
 volume =       "16",
 pages =        "155--177",
+doi = "10.1007/BF02486267"
 }
 
 @Article{	  bazantyu:2005a,
@@ -1063,8 +1065,7 @@ pages = "265 - 272",
 year = "2017",
 note = "Proceedings of the 1st International Conference on the Material Point Method (MPM 2017)",
 issn = "1877-7058",
-doi = "https://doi.org/10.1016/j.proeng.2017.01.022",
-url = "http://www.sciencedirect.com/science/article/pii/S187770581730022X",
+doi = "10.1016/j.proeng.2017.01.022",
 author = "Roel Tielen and Elizaveta Wobbes and Matthias Möller and Lars Beuth",
 keywords = "material point method, B-splines, cubic splines"
 }
@@ -1076,8 +1077,7 @@ volume = "325",
 pages = "301 - 313",
 year = "2016",
 issn = "0021-9991",
-doi = "https://doi.org/10.1016/j.jcp.2016.08.033",
-url = "http://www.sciencedirect.com/science/article/pii/S0021999116303904",
+doi = "10.1016/j.jcp.2016.08.033",
 author = "Tilak R. Dhakal and Duan Z. Zhang",
 keywords = "Material point methods, Shock waves"
 }
@@ -1111,7 +1111,11 @@ issn = {00457825},
 journal = {Computer Methods in Applied Mechanics and Engineering},
 keywords = {Finite deformation,Maximum entropy,Meshfree/particle methods,Tensile instability,Updated Lagrangian},
 title = {{Enhanced local maximum-entropy approximation for stable meshfree simulations}},
-year = {2019}
+year = {2019},
+volume = {344},
+pages = {858 - 886},
+year = {2019},
+issn = {0045-7825}
 }
 
 @article{Jaynes1957,
@@ -1122,13 +1126,17 @@ year = {2019}
   volume={106},
   number={4},
   month={May},
-  pages= {620-630}
+  pages= {620-630},
+  doi = {10.1103/PhysRev.106.620}
 }
 
 @article{Arroyo2006,
 author = {Arroyo, M. and Ortiz, M.},
 doi = {10.1002/nme.1534},
 issn = {00295981},
+volume = {65},
+number = {13},
+pages = {2167-2202},
 journal = {International Journal for Numerical Methods in Engineering},
 keywords = {Approximation theory,Delaunay triangulation,Information theory,Maximum entropy,Meshfree methods},
 title = {{Local maximum-entropy approximation schemes: A seamless bridge between finite elements and meshfree methods}},
@@ -1246,23 +1254,7 @@ title = {{Solid deformation by material point method}},
 volume = {16},
 year = {2017}
 }
-@article{Cercos-Pita2015a,
-abstract = {In this paper, AQUAgpusph, a new free Smoothed Particle Hydrodynamics (SPH) software accelerated with OpenCL, is described. The main differences and progress with respect to other existing alternatives are considered. These are the use of the Open Computing Language (OpenCL) framework instead of the Compute Unified Device Architecture (CUDA), the implementation of the most popular boundary conditions, the easy customization of the code to different problems, the extensibility with regard to Python scripts, and the runtime output which allows the tracking of simulations in real time, or a higher frequency in saving some results without a significant performance lost. These modifications are shown to improve the solver speed, the results quality, and allow for a wider areas of application. AQUAgpusph has been designed trying to provide researchers and engineers with a valuable tool to test and apply the SPH method. Three practical applications are discussed in detail. The evolution of a dam break is used to quantify and compare the computational performance and modeling accuracy with the most popular SPH Graphics Processing Unit (GPU) accelerated alternatives. The dynamics of a coupled system, a Tuned Liquid Damper (TLD), is discussed in order to show the integration capabilities of the solver with external dynamics. Finally, the sloshing flow inside a nuclear reactor is simulated in order to show the capabilities of the solver to treat 3-D problems with complex geometries and of industrial interest. 
 
-PROGRAM SUMMARY
-Program title: AQUAgpusph 1.5 Catalogue identifier: AEVG{\_}v1{\_}0 Program summary URL:http://cpc.cs.qub.ac.uk/summaries/AEVG{\_}v1{\_}0.html Program obtainable from: CPC Program Library, Queen's University, Belfast, N. Ireland Licensing provisions: GNU General Public License, version 3 No. of lines in distributed program, including test data, etc.: 1702666 No. of bytes in distributed program, including test data, etc.: 75117178 Distribution format: tar.gz Programming language: C++, OpenCL, Python. Computer: Linux based computers with OpenCL support. Operating system: Linux. Has the code been vectorized or parallelized?: Code is parallelized with OpenCL. Classification: 1.5. Nature of problem: Complex geometry or heavily fragmented free surface fluid dynamics problems where mesh based method cannot be successfully applied. Solution method: SPH is a meshless method where the fluid domain is discretized as a set of fluid particles. The fields in the fluid domain are smoothed using a kernel function, that allows to develop differential operators from the flow field values in scattered sets of particles. Running time: Using an AMD HD-7970 graphic device 2×105 time steps of a 2-D simulation, with 105 particles and 8×102 neighs per particle, is requiring around 9 h of computation. A more detailed performance analysis will be carried out in the practical application section herein.},
-author = {Cercos-Pita, J.L.},
-doi = {10.1016/J.CPC.2015.01.026},
-file = {:home/miguelmolinos/Documentos/BiblioMendeley/Cercos-Pita/Computer Physics Communications/2015 - AQUAgpusph, a new free 3D SPH solver accelerated with OpenCL.pdf:pdf},
-issn = {0010-4655},
-journal = {Computer Physics Communications},
-month = {jul},
-pages = {295--312},
-publisher = {North-Holland},
-title = {{AQUAgpusph, a new free 3D SPH solver accelerated with OpenCL}},
-volume = {192},
-year = {2015}
-}
 @article{Phuong2016,
 abstract = {The installation of displacement piles in sand leads to severe changes in the stress state, density and soil properties around the pile tip and shaft, and therefore has a significant influence on the pile bearing capacity. Most current numerical methods predicting pile capacity do not take installation effects into account, as large deformations can lead to mesh distortion and non-converging solutions. In this study, the material point method (MPM) is applied to simulate the pile installation process and subsequent static pile loading tests. MPM is an extension of the finite element method (FEM), which is capable of modelling large deformations and soil-structure interactions. This study utilizes the moving mesh algorithm where a redefined computational mesh is applied in the convective phase. This allows a fine mesh to be maintained around the pile tip during the installation process and improves the accuracy of the numerical scheme, especially for contact formulation. For the analyses a hypoplastic constitutive model for sand is used, which takes into account density and stress dependent behaviour. The model performs well in situations with significant stress level changes because it accounts for very high stresses at the pile tip. Numerical results agree with centrifuge experiments at a gravitational level of 40g. This analysis confirms the importance of pile installation effects in numerical simulations, as well as the proposed numerical approach's ability to simulate installation and static load tests of jacked displacement piles.},
 author = {Phuong, N.T.V. and van Tol, A.F. and Elkadi, A.S.K. and Rohe, A.},
@@ -4270,16 +4262,16 @@ title = {{Formulation of a dynamic material point method (MPM) for geomechanical
 url = {https://elib.uni-stuttgart.de/handle/11682/513},
 year = {2013}
 }
+
 @article{Li2010,
 author = {Li, B. and Habbal, F. and Ortiz, M.},
-doi = {10.1002/nme.2869},
 journal = {International Journal for Numerical Methods in Engineering},
 month = {sep},
 number = {12},
 pages = {1541--1579},
 publisher = {John Wiley {\&} Sons, Ltd},
 title = {{Optimal transportation meshfree approximation schemes for fluid and plastic flows}},
-url = {http://doi.wiley.com/10.1002/nme.2869},
+doi = {10.1002/nme.2869},
 volume = {83},
 year = {2010}
 }
@@ -4331,12 +4323,10 @@ year = {1999}
 @article{Bardenhagen2001,
 author = {Bardenhagen, Scott G and Guilkey, J E and Roessig, K M and Brackbill, J U and Witzel, W M and Foster, J C},
 doi = {10.3970/CMES.2001.002.509},
-file = {:home/miguelmolinos/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Bardenhagen et al. - 2001 - An Improved Contact Algorithm for the Material Point Method and Application to Stress Propagation in Granula.pdf:pdf},
 journal = {CMES: Computer Modeling in Engineering {\&} Sciences},
 number = {4},
 pages = {509--522},
 title = {{An Improved Contact Algorithm for the Material Point Method and Application to Stress Propagation in Granular Material}},
-url = {http://www.techscience.com/doi/10.3970/cmes.2001.002.509.html},
 volume = {2},
 year = {2001}
 }
@@ -4591,7 +4581,9 @@ year = {2008}
 @article{Shannon1948,
 author = {Shannon, C. E.},
 doi = {10.1002/j.1538-7305.1948.tb01338.x},
-issn = {15387305},
+volume = {27},
+number = {3},
+pages = {379-423},
 journal = {Bell System Technical Journal},
 pmid = {9230594},
 title = {{A Mathematical Theory of Communication}},
@@ -4643,11 +4635,16 @@ year = {2015}
 author = {Navas, P. and L{\'{o}}pez-Querol, S and Yu, R. C. and Pastor, M.},
 doi = {10.1002/nme.5841},
 issn = {10970207},
+volume = {115},
+number = {10},
+pages = {1217-1240},
 journal = {International Journal for Numerical Methods in Engineering},
 keywords = {Drucker-Prager failure criterion,OTM,explicit Newmark central difference scheme,finite deformation,meshfree,shallow foundations},
 title = {{Optimal transportation meshfree method in geotechnical engineering problems under large deformation regime}},
 year = {2018}
 }
+
+
 @phdthesis{QuecedoGutierrez1997,
 author = {{Quecedo Gutierrez}, Manuel},
 file = {:home/miguelmolinos/Documentos/BiblioMendeley/Quecedo Gutierrez/Unknown/1997 - An{\'{a}}lisis de la rotura por Localizaci{\'{o}}n en materiales viscopl{\'{a}}sticos mediante una formulzaci{\'{o}}n mixta de Elementos Finitos.pdf:pdf},
